# PCPanel

./: CLAUDE.md  justfile  pom.xml
.github/workflows/: build-and-release.yml
packaging/: assemble-backend.sh
packaging/linux/flatpak/: com.getpcpanel.PCPanel.yml  pcpanel-launcher.sh
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/backend/: README.md
src-tauri/capabilities/: default.json
src-tauri/splash/: index.html
src-tauri/src/: main.rs
src/main/java/com/getpcpanel/commands/: IconService.java
src/main/java/com/getpcpanel/cpp/: AudioDevice.java  AudioSession.java  DataFlow.java
src/main/java/com/getpcpanel/cpp/linux/pulseaudio/: PulseAudioAudioDevice.java  PulseAudioAudioSession.java
src/main/java/com/getpcpanel/cpp/osx/: OsxAudioDevice.java
src/main/java/com/getpcpanel/cpp/windows/: WindowsAudioSession.java
src/main/java/com/getpcpanel/profile/dto/: SingleKnobLightingConfig.java  SingleLogoLightingConfig.java  SingleSliderLabelLightingConfig.java  SingleSliderLightingConfig.java
src/main/java/com/getpcpanel/rest/: SystemResource.java
src/main/java/com/getpcpanel/util/: StartupOnboarding.java
src/main/webui/src/app/: onboarding.component.ts
src/main/webui/src/app/features/commands/: command-catalog.ts  command-picker.component.ts
src/main/webui/src/app/pages/settings/: settings.component.html  settings.component.ts
